feat: update CSV trimmer to reduce product ID retention to 1%

--- a/csv_trimmer.ipynb
+++ b/csv_trimmer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "6d170c74",
    "metadata": {},
    "outputs": [],
@@ -14,10 +14,10 @@
     "import random\n",
     "\n",
     "# Input file (CSV only)\n",
-    "INPUT_CSV = r'C:\\Users\\Ven\\Documents\\Coding\\pambihira\\CRAZY\\poop\\ShopeeAnalysis_Amalgam\\consolidated_file_cleaned_v1.csv'\n",
+    "INPUT_CSV = r'C:\\Users\\Ven\\Documents\\Coding\\pambihira\\CRAZY\\poop\\ShopeeAnalysis_Amalgam\\consolidated_trimed_50.csv'\n",
     "\n",
     "# Trimming behavior\n",
-    "TRIM_PERCENT = 0.20  # keep 20% per product id\n",
+    "TRIM_PERCENT = 0.01  # keep 1% per product id\n",
     "RANDOM_SEED = 42\n",
     "\n",
     "# Output file (auto-named using TRIM_PERCENT)\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "7f950412",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
      "output_type": "stream",
      "text": [
       "Columns: ['product', 'time', 'avg.sku_price(₱)', 'sold/day', 'revenue/day(₱)', 'sold/m', 'product_sales_rate(%)', 'price(₱)', 'sku', 'sold', 'sold/month(₱)', 'revenue/month', 'new_ratings', 'ratings', 'ratings_rate', 'likes', 'rating_star', 'new_likes', 'id', 'top-level_category', 'seller_from', 'listing_time', 'active_months', 'suitable_for_seasonal_analysis']\n",
-      "Rows: 7554662\n",
+      "Rows: 3777313\n",
       "Sample rows:\n",
       "                                             product        time  \\\n",
       "0     Cute Different Designs  button accessories ...  2022-03-01   \n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "e5e3630e",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique product IDs: 167589\n"
+      "Unique product IDs: 83794\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "6d220dd3",
    "metadata": {},
    "outputs": [
@@ -122,9 +122,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Products total: 167,589\n",
-      "Products kept (~20.0%): 33,517\n",
-      "Sample kept product IDs: [24664088583, 29100645623, 23619840766, 20549521834, 29554262347]\n"
+      "Products total: 83,794\n",
+      "Products kept (~1.0%): 837\n",
+      "Sample kept product IDs: [23286022697, 26781562347, 20246220530, 22424011026, 13032304534]\n"
      ]
     }
    ],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "0594119e",
    "metadata": {},
    "outputs": [
@@ -155,8 +155,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved trimmed dataset to: consolidated_file_cleaned_v1_trimmed_by_product_ids_20pct.csv\n",
-      "Preview product ID: 18785741873\n",
+      "Saved trimmed dataset to: consolidated_file_cleaned_v1_trimmed_by_product_ids_1pct.csv\n",
+      "Preview product ID: 23943860856\n",
       "Preview product keys: ['product', 'time', 'avg.sku_price(₱)', 'sold/day', 'revenue/day(₱)', 'sold/m', 'product_sales_rate(%)', 'price(₱)', 'sku', 'sold', 'sold/month(₱)', 'revenue/month', 'new_ratings', 'ratings', 'ratings_rate', 'likes', 'rating_star', 'new_likes', 'id', 'top-level_category', 'seller_from', 'listing_time', 'active_months', 'suitable_for_seasonal_analysis']\n"
      ]
     }
@@ -175,7 +175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "3.9.13",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -189,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
