chore: update notebook results

--- a/seasonal_trend_decomp.ipynb
+++ b/seasonal_trend_decomp.ipynb
@@ -1303,10 +1303,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5814b261",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 30 category decomposition plots to 'seasonal_trend/visualizations/category_decompositions/'\n",
+      "Files saved successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Create directory for category-level decompositions\n",
     "output_dir = 'seasonal_trend/visualizations/category_decompositions'\n",
@@ -1376,10 +1385,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "d5f2d9fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 10 seasonal subseries plots to 'seasonal_trend/visualizations/seasonal_subseries/'\n",
+      "Files saved successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Create directory for seasonal subseries plots\n",
     "output_dir = 'seasonal_trend/visualizations/seasonal_subseries'\n",
@@ -1444,10 +1462,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8d1e7a24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================================================================\n",
+      "SEASONAL DECOMPOSITION ANALYSIS SUMMARY\n",
+      "================================================================================\n",
+      "\n",
+      "1. DATA PROCESSING:\n",
+      "   - Total products in dataset: 7554662\n",
+      "   - Products with ≥12 months: 158412\n",
+      "   - Products decomposed (≥24 months): 126556\n",
+      "   - Categories analyzed: 30\n",
+      "\n",
+      "2. TOP PRODUCTS BY SEASONAL AMPLITUDE:\n",
+      "   (Strong seasonal patterns - inventory optimization opportunities)\n",
+      "   Adjustable Car Battery Holder Stabilizer Fixed Bra | Amplitude: 300.000\n",
+      "   GDPLUS BAVIN Waterproof Phone Bag Touch-Screen Und | Amplitude: 300.000\n",
+      "   Mini LED Candle Light | Flameless Candle Lamp | We | Amplitude: 300.000\n",
+      "   (35-125kg)Padded Strapless bra Plus size Bra push  | Amplitude: 300.000\n",
+      "   1-10Pcs Rice Sub Packaged Boxes / 280ML Refrigerat | Amplitude: 300.000\n",
+      "\n",
+      "3. TOP PRODUCTS BY TREND SLOPE:\n",
+      "   (Emerging interest - growing demand)\n",
+      "   3D vinyl Floor sticker ( 91.44* 15.24cm) self adhe | Slope: 25181.185\n",
+      "   3D Self-Adhesive Wallpaper Continuous Waterproof B | Slope: 10672.797\n",
+      "   Petsup Cat Wet Food Real Meat Delish 85g Real Chic | Slope: 10633.470\n",
+      "   ❀◇ Receipt Resibo With Carbon                      | Slope: 7926.994\n",
+      "   3D Vinyl Floor Sticker With Waterproof PVC and Sel | Slope: 7082.504\n",
+      "\n",
+      "4. TOP PRODUCTS BY RESIDUAL ANOMALIES:\n",
+      "   (Viral events or short-term consumer surges)\n",
+      "   Cetaphil Gentle Skin Cleanser 250ml [For Sensitive | Max Z-Score: 5.74\n",
+      "   Luxe Organix Intensive Whitening Underarm Cream 10 | Max Z-Score: 5.74\n",
+      "   Flyman Allen wrench set original                   | Max Z-Score: 5.74\n",
+      "   Cetaphil Baby Gentle Cleansing Bar 127g [Hypoaller | Max Z-Score: 5.74\n",
+      "   Compact EWA Fingertip Oximeter with Accurate SpO2  | Max Z-Score: 5.74\n",
+      "\n",
+      "5. CATEGORY-LEVEL INSIGHTS:\n",
+      "   Fashion Accessories            | Trend Slope: 32203195.33 | Seasonal Amp: 9.732\n",
+      "   Beauty                         | Trend Slope: 635248.43 | Seasonal Amp: 5.490\n",
+      "   Stationery                     | Trend Slope: 212167.00 | Seasonal Amp: 2.004\n",
+      "   Computers & Accessories        | Trend Slope:  6289.96 | Seasonal Amp: 1.434\n",
+      "   Women Shoes                    | Trend Slope:    54.45 | Seasonal Amp: 0.968\n",
+      "   Home & Living                  | Trend Slope: 505728.13 | Seasonal Amp: 3.528\n",
+      "   Men Clothes                    | Trend Slope: 16761.83 | Seasonal Amp: 0.979\n",
+      "   Motorcycles                    | Trend Slope: 43131.25 | Seasonal Amp: 2.225\n",
+      "   Automobiles                    | Trend Slope: 40713.32 | Seasonal Amp: 1.307\n",
+      "   Mobile & Gadgets               | Trend Slope: 23783.22 | Seasonal Amp: 2.179\n",
+      "   Audio                          | Trend Slope:  7152.25 | Seasonal Amp: 1.569\n",
+      "   Mom & Baby                     | Trend Slope: 81575.89 | Seasonal Amp: 3.094\n",
+      "   Baby & Kids Fashion            | Trend Slope: 15867.24 | Seasonal Amp: 1.003\n",
+      "   Sports & Outdoors              | Trend Slope: 114764.24 | Seasonal Amp: 4.136\n",
+      "   Women Clothes                  | Trend Slope: 17156.34 | Seasonal Amp: 0.917\n",
+      "   Pets                           | Trend Slope: 119314.25 | Seasonal Amp: 45.188\n",
+      "   Home Appliances                | Trend Slope:  7944.90 | Seasonal Amp: 0.868\n",
+      "   Food & Beverages               | Trend Slope: 22065.79 | Seasonal Amp: 0.986\n",
+      "   Hobbies & Collections          | Trend Slope: 23375.75 | Seasonal Amp: 0.609\n",
+      "   Women Bags                     | Trend Slope:  8321.47 | Seasonal Amp: 2.878\n",
+      "   Health                         | Trend Slope: -146738.51 | Seasonal Amp: 1.013\n",
+      "   Gaming & Consoles              | Trend Slope:  -866.58 | Seasonal Amp: 1.636\n",
+      "   Men Shoes                      | Trend Slope: 11587.57 | Seasonal Amp: 0.774\n",
+      "   Travel & Luggage               | Trend Slope:  9764.99 | Seasonal Amp: 1.925\n",
+      "   Watches                        | Trend Slope:  3239.03 | Seasonal Amp: 2.492\n",
+      "   Men Bags                       | Trend Slope:  1321.05 | Seasonal Amp: 1.615\n",
+      "   Books & Magazines              | Trend Slope:  2322.31 | Seasonal Amp: 2.446\n",
+      "   Cameras & Drones               | Trend Slope:  1773.17 | Seasonal Amp: 0.602\n",
+      "   Muslim Fashion                 | Trend Slope:   742.01 | Seasonal Amp: 1.452\n",
+      "   Tickets, Vouchers & Services   | Trend Slope: -24551.40 | Seasonal Amp: 2.658\n",
+      "\n",
+      "6. OUTPUT FILES GENERATED:\n",
+      "   - seasonal_trend/seasonal_decomposition_results.csv (metrics for 126556 products)\n",
+      "   - seasonal_trend/visualizations/top_seasonal_products/ (individual product plots)\n",
+      "   - seasonal_trend/visualizations/top_anomaly_products/ (individual anomaly plots)\n",
+      "   - seasonal_trend/visualizations/category_decompositions/ (individual category plots)\n",
+      "   - seasonal_trend/visualizations/seasonal_subseries/ (individual subseries plots)\n",
+      "\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate summary report\n",
     "print(\"=\"*80)\n",
