--- a/EDA/seasonal_trend_decomp.ipynb
+++ b/EDA/seasonal_trend_decomp.ipynb
@@ -78,8 +78,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Removed old file: seasonal_trend/seasonal_decomposition_results.csv\n",
-      "Removed old directory: seasonal_trend/visualizations/\n",
       "Cleanup completed. Ready for new exports.\n"
      ]
     }
@@ -93,9 +91,9 @@
     "    Remove old export files and directories before generating new results.\n",
     "    This ensures we always have fresh exports without accumulating old files.\n",
     "    \"\"\"\n",
-    "    # Define export paths\n",
-    "    csv_file = 'seasonal_trend/seasonal_decomposition_results.csv'\n",
-    "    viz_base_dir = 'seasonal_trend/visualizations'\n",
+    "    # Define export paths (relative to notebook location in EDA/)\n",
+    "    csv_file = '../seasonal_trend/seasonal_decomposition_results.csv'\n",
+    "    viz_base_dir = '../seasonal_trend/visualizations'\n",
     "    \n",
     "    # Remove CSV file if it exists\n",
     "    if os.path.exists(csv_file):\n",
@@ -244,7 +242,7 @@
    ],
    "source": [
     "# Load the CSV dataset\n",
-    "df = pd.read_csv('consolidated_file_cleaned_v2.csv')\n",
+    "df = pd.read_csv('../CSV/consolidated_file_cleaned_v2.csv')\n",
     "\n",
     "print(f\"Dataset loaded successfully!\")\n",
     "print(f\"Shape: {df.shape}\")\n",
@@ -304,6 +302,10 @@
       "Unique time values: 45\n",
       "\n",
       "Time value examples:\n",
+      "\n",
+      "Unique time values: 45\n",
+      "\n",
+      "Time value examples:\n",
       "['2022-03-01' '2022-04-01' '2022-05-01' '2022-06-01' '2022-07-01'\n",
       " '2022-08-01' '2022-09-01' '2022-10-01' '2022-11-01' '2022-12-01']\n",
       "\n",
@@ -316,6 +318,61 @@
       "Name: count, dtype: int64\n",
       "\n",
       "Sample of key columns:\n",
+      "['2022-03-01' '2022-04-01' '2022-05-01' '2022-06-01' '2022-07-01'\n",
+      " '2022-08-01' '2022-09-01' '2022-10-01' '2022-11-01' '2022-12-01']\n",
+      "\n",
+      "Data type of 'time' column: object\n",
+      "\n",
+      "Checking 'suitable_for_seasonal_analysis' column:\n",
+      "suitable_for_seasonal_analysis\n",
+      "True     7142715\n",
+      "False     411947\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Sample of key columns:\n",
+      "                                              product        time  sold/m  \\\n",
+      "0      Cute Different Designs  button accessories ...  2022-03-01     NaN   \n",
+      "1      Cute Different Designs  button accessories ...  2022-04-01     NaN   \n",
+      "2      Cute Different Designs  button accessories ...  2022-05-01     NaN   \n",
+      "3      Cute Different Designs  button accessories ...  2022-06-01     NaN   \n",
+      "4      Cute Different Designs  button accessories ...  2022-07-01     NaN   \n",
+      "5      Cute Different Designs  button accessories ...  2022-08-01     NaN   \n",
+      "6      Cute Different Designs  button accessories ...  2022-09-01     NaN   \n",
+      "7      Cute Different Designs  button accessories ...  2022-10-01     NaN   \n",
+      "8      Cute Different Designs  button accessories ...  2022-11-01     0.0   \n",
+      "9      Cute Different Designs  button accessories ...  2022-12-01     0.0   \n",
+      "10     Cute Different Designs  button accessories ...  2023-01-01  1590.0   \n",
+      "11     Cute Different Designs  button accessories ...  2023-02-01  1741.0   \n",
+      "12     Cute Different Designs  button accessories ...  2023-03-01  2424.0   \n",
+      "13     Cute Different Designs  button accessories ...  2023-04-01  1908.0   \n",
+      "14     Cute Different Designs  button accessories ...  2023-05-01  1683.0   \n",
+      "15     Cute Different Designs  button accessories ...  2023-06-01  1493.0   \n",
+      "16     Cute Different Designs  button accessories ...  2023-07-01  1614.0   \n",
+      "17     Cute Different Designs  button accessories ...  2023-08-01     0.0   \n",
+      "18     Cute Different Designs  button accessories ...  2023-09-01     0.0   \n",
+      "19     Cute Different Designs  button accessories ...  2023-10-01     0.0   \n",
+      "\n",
+      "    revenue/month   top-level_category  \n",
+      "0             NaN  Fashion Accessories  \n",
+      "1             NaN  Fashion Accessories  \n",
+      "2             NaN  Fashion Accessories  \n",
+      "3             NaN  Fashion Accessories  \n",
+      "4             NaN  Fashion Accessories  \n",
+      "5             NaN  Fashion Accessories  \n",
+      "6             NaN  Fashion Accessories  \n",
+      "7             NaN  Fashion Accessories  \n",
+      "8            0.00  Fashion Accessories  \n",
+      "9            0.00  Fashion Accessories  \n",
+      "10         122.68  Fashion Accessories  \n",
+      "11          13.12  Fashion Accessories  \n",
+      "12          39.23  Fashion Accessories  \n",
+      "13         -21.28  Fashion Accessories  \n",
+      "14         -11.79  Fashion Accessories  \n",
+      "15         -11.28  Fashion Accessories  \n",
+      "16          -3.90  Fashion Accessories  \n",
+      "17           0.00  Fashion Accessories  \n",
+      "18           0.00  Fashion Accessories  \n",
+      "19           0.00  Fashion Accessories  \n",
       "                                              product        time  sold/m  \\\n",
       "0      Cute Different Designs  button accessories ...  2022-03-01     NaN   \n",
       "1      Cute Different Designs  button accessories ...  2022-04-01     NaN   \n",
@@ -410,6 +467,44 @@
       "Sample periods: [Period('2022-03', 'M'), Period('2022-04', 'M'), Period('2022-05', 'M'), Period('2022-06', 'M'), Period('2022-07', 'M'), Period('2022-08', 'M'), Period('2022-09', 'M'), Period('2022-10', 'M'), Period('2022-11', 'M'), Period('2022-12', 'M'), Period('2023-01', 'M'), Period('2023-02', 'M')]\n",
       "\n",
       "Data structure (long format - multiple rows per product):\n",
+      "\n",
+      "Unique periods: 45\n",
+      "Sample periods: [Period('2022-03', 'M'), Period('2022-04', 'M'), Period('2022-05', 'M'), Period('2022-06', 'M'), Period('2022-07', 'M'), Period('2022-08', 'M'), Period('2022-09', 'M'), Period('2022-10', 'M'), Period('2022-11', 'M'), Period('2022-12', 'M'), Period('2023-01', 'M'), Period('2023-02', 'M')]\n",
+      "\n",
+      "Data structure (long format - multiple rows per product):\n",
+      "                                              product       date   period  \\\n",
+      "0      Cute Different Designs  button accessories ... 2022-03-01  2022-03   \n",
+      "1      Cute Different Designs  button accessories ... 2022-04-01  2022-04   \n",
+      "2      Cute Different Designs  button accessories ... 2022-05-01  2022-05   \n",
+      "3      Cute Different Designs  button accessories ... 2022-06-01  2022-06   \n",
+      "4      Cute Different Designs  button accessories ... 2022-07-01  2022-07   \n",
+      "5      Cute Different Designs  button accessories ... 2022-08-01  2022-08   \n",
+      "6      Cute Different Designs  button accessories ... 2022-09-01  2022-09   \n",
+      "7      Cute Different Designs  button accessories ... 2022-10-01  2022-10   \n",
+      "8      Cute Different Designs  button accessories ... 2022-11-01  2022-11   \n",
+      "9      Cute Different Designs  button accessories ... 2022-12-01  2022-12   \n",
+      "10     Cute Different Designs  button accessories ... 2023-01-01  2023-01   \n",
+      "11     Cute Different Designs  button accessories ... 2023-02-01  2023-02   \n",
+      "12     Cute Different Designs  button accessories ... 2023-03-01  2023-03   \n",
+      "13     Cute Different Designs  button accessories ... 2023-04-01  2023-04   \n",
+      "14     Cute Different Designs  button accessories ... 2023-05-01  2023-05   \n",
+      "\n",
+      "    sold/m  revenue/month   top-level_category  \n",
+      "0      NaN            NaN  Fashion Accessories  \n",
+      "1      NaN            NaN  Fashion Accessories  \n",
+      "2      NaN            NaN  Fashion Accessories  \n",
+      "3      NaN            NaN  Fashion Accessories  \n",
+      "4      NaN            NaN  Fashion Accessories  \n",
+      "5      NaN            NaN  Fashion Accessories  \n",
+      "6      NaN            NaN  Fashion Accessories  \n",
+      "7      NaN            NaN  Fashion Accessories  \n",
+      "8      0.0           0.00  Fashion Accessories  \n",
+      "9      0.0           0.00  Fashion Accessories  \n",
+      "10  1590.0         122.68  Fashion Accessories  \n",
+      "11  1741.0          13.12  Fashion Accessories  \n",
+      "12  2424.0          39.23  Fashion Accessories  \n",
+      "13  1908.0         -21.28  Fashion Accessories  \n",
+      "14  1683.0         -11.79  Fashion Accessories  \n",
       "                                              product       date   period  \\\n",
       "0      Cute Different Designs  button accessories ... 2022-03-01  2022-03   \n",
       "1      Cute Different Designs  button accessories ... 2022-04-01  2022-04   \n",
@@ -492,6 +587,15 @@
       "Products: 158437, Time periods: 45\n",
       "\n",
       "Time periods: [Period('2022-03', 'M'), Period('2022-04', 'M'), Period('2022-05', 'M'), Period('2022-06', 'M'), Period('2022-07', 'M'), Period('2022-08', 'M'), Period('2022-09', 'M'), Period('2022-10', 'M'), Period('2022-11', 'M'), Period('2022-12', 'M'), Period('2023-01', 'M'), Period('2023-02', 'M')]\n",
+      "\n",
+      "Pivoted data shape: (158437, 45)\n",
+      "Products: 158437, Time periods: 45\n",
+      "\n",
+      "Time periods: [Period('2022-03', 'M'), Period('2022-04', 'M'), Period('2022-05', 'M'), Period('2022-06', 'M'), Period('2022-07', 'M'), Period('2022-08', 'M'), Period('2022-09', 'M'), Period('2022-10', 'M'), Period('2022-11', 'M'), Period('2022-12', 'M'), Period('2023-01', 'M'), Period('2023-02', 'M')]\n",
+      "\n",
+      "Total products after pivot: 158437\n",
+      "Products with ≥12 months data: 158412\n",
+      "Filtered out: 25 products\n",
       "\n",
       "Total products after pivot: 158437\n",
       "Products with ≥12 months data: 158412\n",
@@ -922,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "5b035a67",
    "metadata": {},
    "outputs": [
@@ -930,7 +1034,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Metrics exported to 'seasonal_trend/seasonal_decomposition_results.csv'\n",
+      "Metrics exported to '../CSV/seasonal_decomposition_results.csv'\n",
       "Total rows: 126556\n",
       "\n",
       "Columns: ['product', 'category', 'mean_monthly_sales', 'seasonal_amplitude', 'trend_slope', 'max_residual_zscore']\n"
@@ -939,7 +1043,7 @@
    ],
    "source": [
     "# Export metrics to CSV\n",
-    "output_filename = 'seasonal_trend/seasonal_decomposition_results.csv'\n",
+    "output_filename = '../CSV/seasonal_decomposition_results.csv'\n",
     "metrics_df.to_csv(output_filename, index=False)\n",
     "\n",
     "print(f\"Metrics exported to '{output_filename}'\")\n",
@@ -958,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "4292b59e",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3d27c9ff",
    "metadata": {},
    "outputs": [
@@ -1125,7 +1229,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 10 seasonal decomposition plots to 'seasonal_trend/visualizations/top_seasonal_products/'\n",
+      "Saved 10 seasonal decomposition plots to '../seasonal_trend/visualizations/top_seasonal_products/'\n",
       "Files saved successfully!\n"
      ]
     }
@@ -1134,7 +1238,7 @@
     "import os\n",
     "\n",
     "# Create directory for top seasonal products\n",
-    "output_dir = 'seasonal_trend/visualizations/top_seasonal_products'\n",
+    "output_dir = '../seasonal_trend/visualizations/top_seasonal_products'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Visualize decomposition for top seasonal products (individual plots)\n",
@@ -1206,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2318058d",
    "metadata": {},
    "outputs": [
@@ -1214,14 +1318,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 10 anomaly decomposition plots to 'seasonal_trend/visualizations/top_anomaly_products/'\n",
+      "Saved 10 anomaly decomposition plots to '../seasonal_trend/visualizations/top_anomaly_products/'\n",
       "Files saved successfully!\n"
      ]
     }
    ],
    "source": [
     "# Create directory for top anomaly products\n",
-    "output_dir = 'seasonal_trend/visualizations/top_anomaly_products'\n",
+    "output_dir = '../seasonal_trend/visualizations/top_anomaly_products'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Visualize decomposition for top anomaly products (individual plots)\n",
@@ -1303,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "5814b261",
    "metadata": {},
    "outputs": [
@@ -1385,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "d5f2d9fa",
    "metadata": {},
    "outputs": [
@@ -1393,14 +1497,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 10 seasonal subseries plots to 'seasonal_trend/visualizations/seasonal_subseries/'\n",
+      "Saved 10 seasonal subseries plots to '../seasonal_trend/visualizations/seasonal_subseries/'\n",
       "Files saved successfully!\n"
      ]
     }
    ],
    "source": [
     "# Create directory for seasonal subseries plots\n",
-    "output_dir = 'seasonal_trend/visualizations/seasonal_subseries'\n",
+    "output_dir = '../seasonal_trend/visualizations/seasonal_subseries'\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "# Create seasonal subseries plots for top seasonal products\n",
@@ -1462,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "8d1e7a24",
    "metadata": {},
    "outputs": [
@@ -1610,7 +1714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.3"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
