Add evaluation metrics (RMSE, MAE, MAPE) for SARIMA model in Jupyter notebook
- Implemented functions to calculate RMSE, MAE, and MAPE.
- Added a loop to evaluate the SARIMA model for each category and store metrics.
- Included print statements for displaying evaluation results.
- Created a DataFrame to store and display metrics for further analysis.

--- a/HYBRID MODEL/hybrid_forecasting.ipynb
+++ b/HYBRID MODEL/hybrid_forecasting.ipynb
@@ -4101,6 +4101,46 @@
     "print(\"\\n✅ Hybrid forecasts saved to: hybrid_sarima_lstm_forecasts.csv\")\n",
     "hybrid_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc6b82c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Evaluation Metrics: RMSE, MAE, MAPE ---\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "def mean_absolute_percentage_error(y_true, y_pred):\n",
+    "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
+    "    nonzero = y_true != 0\n",
+    "    return np.mean(np.abs((y_true[nonzero] - y_pred[nonzero]) / y_true[nonzero])) * 100 if np.any(nonzero) else np.nan\n",
+    "\n",
+    "# Evaluate only for categories with enough data and actuals available\n",
+    "metrics = []\n",
+    "for cat in category_data['second-level_category'].unique():\n",
+    "    data_cat = category_data[category_data['second-level_category'] == cat]\n",
+    "    ts = data_cat.set_index('month')['sold/m']\n",
+    "    if len(ts) < 18 or ts.sum() == 0 or ts.nunique() == 1:\n",
+    "        continue\n",
+    "    # Get actuals for the last FORECAST_STEPS months\n",
+    "    actuals = ts[-FORECAST_STEPS:]\n",
+    "    preds = hybrid_df[hybrid_df['category'] == cat]['predicted_sold_per_month'].values[:len(actuals)]\n",
+    "    if len(actuals) == 0 or len(preds) == 0:\n",
+    "        continue\n",
+    "    rmse = mean_squared_error(actuals, preds, squared=False)\n",
+    "    mae = mean_absolute_error(actuals, preds)\n",
+    "    mape = mean_absolute_percentage_error(actuals, preds)\n",
+    "    metrics.append({'category': cat, 'RMSE': rmse, 'MAE': mae, 'MAPE': mape})\n",
+    "    print(f\"Category: {cat}\")\n",
+    "    print(f\"  RMSE: {rmse:.4f}\")\n",
+    "    print(f\"  MAE: {mae:.4f}\")\n",
+    "    print(f\"  MAPE: {mape:.2f}%\\n\")\n",
+    "\n",
+    "metrics_df = pd.DataFrame(metrics)\n",
+    "metrics_df.head()"
+   ]
   }
  ],
  "metadata": {
