--- a/HYBRID MODEL/sarima_modelling.ipynb
+++ b/HYBRID MODEL/sarima_modelling.ipynb
@@ -109,6 +109,62 @@
     "print(\"\\n✨ SARIMA Training Complete!\")\n",
     "print(\"Residuals file saved as: sarima_residuals.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "733a8b43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Evaluation Metrics: RMSE, MAE, MAPE ---\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "def mean_absolute_percentage_error(y_true, y_pred):\n",
+    "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
+    "    nonzero = y_true != 0\n",
+    "    return np.mean(np.abs((y_true[nonzero] - y_pred[nonzero]) / y_true[nonzero])) * 100 if np.any(nonzero) else np.nan\n",
+    "\n",
+    "# Store metrics for each category\n",
+    "sarima_metrics = []\n",
+    "\n",
+    "for cat in tqdm(categories):\n",
+    "    series = monthly[monthly[CATEGORY_COL] == cat].set_index(DATE_COL)[TARGET].asfreq(\"MS\")\n",
+    "    if len(series) < 18:\n",
+    "        continue\n",
+    "    try:\n",
+    "        model = sm.tsa.statespace.SARIMAX(\n",
+    "            series,\n",
+    "            order=(1,1,1),\n",
+    "            seasonal_order=(1,1,1,12),\n",
+    "            enforce_stationarity=False,\n",
+    "            enforce_invertibility=False\n",
+    "        ).fit(disp=False)\n",
+    "        model.save(f\"sarima_results/{cat}.pkl\")\n",
+    "        resid = model.resid.dropna()\n",
+    "        tmp = pd.DataFrame({\n",
+    "            CATEGORY_COL: cat,\n",
+    "            \"date\": resid.index,\n",
+    "            \"residual\": resid.values\n",
+    "        })\n",
+    "        all_resids.append(tmp)\n",
+    "        # --- Evaluation ---\n",
+    "        y_true = series[-len(resid):]\n",
+    "        y_pred = series[-len(resid):] - resid\n",
+    "        rmse = mean_squared_error(y_true, y_pred, squared=False)\n",
+    "        mae = mean_absolute_error(y_true, y_pred)\n",
+    "        mape = mean_absolute_percentage_error(y_true, y_pred)\n",
+    "        sarima_metrics.append({'category': cat, 'RMSE': rmse, 'MAE': mae, 'MAPE': mape})\n",
+    "        print(f\"Category: {cat}\")\n",
+    "        print(f\"  RMSE: {rmse:.4f}\")\n",
+    "        print(f\"  MAE: {mae:.4f}\")\n",
+    "        print(f\"  MAPE: {mape:.2f}%\\n\")\n",
+    "    except:\n",
+    "        pass\n",
+    "\n",
+    "metrics_df = pd.DataFrame(sarima_metrics)\n",
+    "metrics_df.head()"
+   ]
   }
  ],
  "metadata": {
